# idat-mcp

./: .gitignore  README.md  pyproject.toml  server.py  setup.py
scripts/: setup.sh
src/idat_mcp/: __init__.py  __main__.py  config.py  pool.py  server.py  worker.py
src/idat_mcp/ops/: __init__.py  analysis.py  annotations.py  common.py  database.py  functions.py  refresh.py  script.py  search.py  symbols.py  types.py  variables.py  xrefs.py
src/idat_mcp/tools/: __init__.py  _base.py  analysis.py  annotations.py  database.py  functions.py  script.py  search.py  symbols.py  types.py  variables.py  xrefs.py
