[project]
name = "idat-mcp"
version = "0.1.0"
description = "Headless IDA Pro MCP server over HTTP, powered by idalib (idat)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "idat-mcp contributors" }]
dependencies = [
    "mcp>=1.0.0",
    "uvicorn>=0.31.0",
]

[project.scripts]
idat-mcp = "idat_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idat_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
